<resources>
    <string name="app_name">GastosViagem</string>
    <string name="distance">Distância</string>
    <string name="quilometers_total">Total de quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">Kms por litro</string>
    <string name="total_spend">Seu gasto total será de:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>


</resources>